Fixed scrollbar on all div's.

--- a/AlfieCodes/wwwroot/css/site.css
+++ b/AlfieCodes/wwwroot/css/site.css
@@ -5,6 +5,9 @@ for details on configuring this project to bundle and minify static web assets. 
 
 * {
     font-family: 'Roboto', sans-serif;
+}
+
+body {
     overflow-x: hidden;
 }
 
@@ -318,6 +321,15 @@ hr {
     transform: translate(-50%, -50%);
     font-weight: 700;
     color: white;
+}
+
+.post-container {
+    height: 100%;
+}
+
+.tag-cloud {
+    display: inline;
+    padding-top: 50px;
 }
 
 @media only screen and (max-width: 768px) {
